--- a/login/loginCadastroPage/src/components/TabsLanding/TabsLanding.css
+++ b/login/loginCadastroPage/src/components/TabsLanding/TabsLanding.css
@@ -5,10 +5,12 @@
 .myTab {
     font-family: "Oswald", sans-serif;
     font-size: 1.25rem;
-    color: #999;
+    color: #FFF;
     width: 600px;
     margin-bottom: 0px;
     border-bottom: 0px;
+    background-color: #333;
+    border-radius: 5px;
 }
 
 .mb-3 {
