--- a/paginaFeed/src/App.css
+++ b/paginaFeed/src/App.css
@@ -8,12 +8,14 @@
 
 .main-content {
   flex-grow: 1;
-  padding: 10px;
+  /* padding: 10px; */
+  
   background-color: #1c1c1c;
   display: flex;
   flex-direction: column;
   
   margin-left: 300px;
+  margin-right: 300px;
   
   
   
