--- a/paginaFeed/src/components/PostContent/Post.css
+++ b/paginaFeed/src/components/PostContent/Post.css
@@ -13,7 +13,7 @@
   }
   
   .post h3 {
-    color: #a83eff;
+    color: #fff;
     margin-bottom: 15px;
   }
   
@@ -28,7 +28,7 @@
     height: auto;
     border-radius: 5px;
   }
-  
+/*   
   button {
     padding: 10px 20px;
     background-color: #b083f1;
@@ -41,5 +41,50 @@
   
   button:hover {
     background-color: #a071e1;
-  }
-  
+  } */
+  button {
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.2) !important;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  cursor: pointer;
+  font-family: "Oswald", sans-serif;
+  font-size: 16px; /* Tamanho da fonte */
+  transition: background-color 0.3s ease, transform 0.2s ease; /* Transições suaves */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important; 
+}
+
+button:hover {
+  background-color: #a071e1;
+  transform: scale(1.05); /* Leve aumento ao passar o mouse */
+}
+
+button:active {
+  background-color: #8a60c1;
+  transform: scale(0.98); /* Efeito de clique */
+}
+.like-section {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 15px;
+}
+
+.like-button {
+  padding: 8px 12px;
+  background-color: transparent;
+  border: none;
+  color: #a83eff;
+  font-size: 16px;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.like-button:hover {
+  color: #9031d1;
+}
+
+.like-button.liked {
+  color: #ff3b3f; /* Cor do botão quando curtido */
+}
