--- a/paginaFeed/src/components/SideBar/Explore/Explore.css
+++ b/paginaFeed/src/components/SideBar/Explore/Explore.css
@@ -1,42 +1,34 @@
 .explore {
-    background-color: #2c2c2c;
-    color: #a83eff;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px 0;
-    font-size: 1.2rem;
-    border: 2px solid #a83eff;
-  }
-  
-  .explore h2 {
-    font-size: 48px;
-    color: #a83eff;
-  }
-  
-  .explore p {
-    font-size: 16px;
-    color: #d9d9d9;
-    font-size: 1.5rem;
-  }
-  
-  .explore-content {
-    display: flex;
-    gap: 10px;
-    margin-top: 20px;
-  }
-  
-  .explore-content div {
-    background-color: #383838;
-    padding: 20px;
-    border-radius: 8px;
-    color: white;
-    flex: 1;
-    text-align: center;
-  }
-  
-  .explore-content div:hover {
-    background-color: #4e4e4e;
-    cursor: pointer;
-  }
-  
-  
+  text-align: center;
+}
+
+.explore-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+}
+
+.drink-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.drink-card {
+  width: 120px;
+  height: 120px; /* Altura fixa para uniformizar */
+  padding: 10px;
+  background-color: #222;
+  border: 2px solid #a83eff;
+  border-radius: 10px;
+  text-align: center;
+  color: white;
+  display: flex;
+  align-items: center; /* Centraliza o texto verticalmente */
+  justify-content: center; /* Centraliza o texto horizontalmente */
+  transition: background-color 0.3s ease;
+}
+
+.drink-card:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
