--- a/paginaFeed/src/index.css
+++ b/paginaFeed/src/index.css
@@ -11,7 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --primary-color: #a83eff;
+  --primary-color: #fff;
   --background-color: #1c1c1c;
   --text-color: rgba(255, 255, 255, 0.87);
   --secondary-background-color: #1c1c1c;
@@ -47,7 +47,7 @@ h1, h2, h3 {
   margin-bottom: 20px;
 }
 
-h1 {
+/* h1 {
   font-size: 3rem;
   line-height: 1.1;
 }
@@ -58,7 +58,7 @@ h2 {
 
 h3 {
   font-size: 2rem;
-}
+} */
 
 
 
