--- a/paginaFeed/src/components/SideBar/Explore/Modal.css
+++ b/paginaFeed/src/components/SideBar/Explore/Modal.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7); /* Fundo mais escuro */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,29 +12,26 @@
   }
   
   .modal-content {
-    background: white;
-    padding: 20px;
+    background-color: #333; /* Cor de fundo escura */
     border-radius: 8px;
-    width: 300px;
-    position: relative;
+    width: 80%;
+    max-width: 700px; /* Aumenta a largura máxima do modal */
+    max-height: 80vh;
+    overflow-y: auto;
+    padding: 10px;
+    box-shadow: 0px 0px 15px rgba(51, 51, 51, 0.8) ; /* Efeito de sombra */
+    color: white;
     text-align: center;
   }
   
-  .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border: none;
-    background: none;
-    cursor: pointer;
-  }
   
   .drink-image {
-    width: 100%;
+    width: 100%; /* A imagem ocupa toda a largura do modal */
     height: auto;
     border-radius: 5px;
     margin: 10px 0;
   }
+  
   
   a {
     display: inline-block;
