--- a/login/loginCadastroPage/src/components/LoginCadastro.css
+++ b/login/loginCadastroPage/src/components/LoginCadastro.css
@@ -24,7 +24,8 @@ body {
     overflow: hidden;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     transition: all 0.3s ease-in-out;
-    flex-direction: column;
+    flex-direction: column; 
+    
 
   }
   
@@ -35,7 +36,7 @@ body {
     color: #ffffff;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* Garantir que os itens dentro fiquem organizados */
+    justify-content: center; /* Garantir que os itens dentro fiquem organizados */
     align-items: center;
     height: 600px; /* Definindo uma altura fixa para ambas as seções */
   }
@@ -48,6 +49,7 @@ body {
   
   .login-form h2,
   .cadastro-form h2 {
+    
     margin-bottom: 20px;
     font-family: "Oswald", sans-serif;
   }
@@ -58,7 +60,7 @@ body {
     margin-bottom: 20px;
     border: 2px solid #a83eff;
     border-radius: 5px;
-    background-color: #ffffff;
+    background-color:#ffffff;
     color: #000000;
   }
   
@@ -69,7 +71,7 @@ body {
     padding: 10px 20px;
     cursor: pointer;
     font-size: 1.3rem;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 50%;
   }
   
