--- a/paginaFeed/src/components/SideBar/BarBot/BarBot.css
+++ b/paginaFeed/src/components/SideBar/BarBot/BarBot.css
@@ -16,9 +16,9 @@
   .BarBot {
     height: 100vh;
     background-color: #333333;
-    /* margin-left: 10px; */
+    width: 100%;
     background-color: #1c1c1c;
-    border: 2px solid #a83eff;
+    /* border: 2px solid #a83eff; */
     border-radius: 10px;
     padding: 30px;
     color: white;
