--- a/paginaFeed/src/components/PostContent/Post.css
+++ b/paginaFeed/src/components/PostContent/Post.css
@@ -1,19 +1,30 @@
 .post {
     background-color: #1c1c1c;
-    border-radius: 10px;
     padding: 30px;
     color: white;
-    margin-bottom: 20px;
-    
+    margin-bottom: 0px;
+    padding-left: 25%;
   }
   
   .post h2 {
     margin-bottom: 10px;
   }
   
-  .post h3 {
+  .post h4 {
     color: #fff;
     margin-bottom: 15px;
+  }
+
+  .post h6, 
+  .post h4, 
+  .post h2,
+  .post ul,
+  .post p, 
+  .like-section,
+  .description.truncated,
+  .description.expanded {
+    padding-left: 7%;
+    padding-right: 7%;
   }
   
   .post ul {
@@ -26,21 +37,9 @@
     max-width: 100%;  /* Garante que a imagem nunca ultrapasse o limite do post */
     height: auto;
     border-radius: 5px;
+    margin-bottom: 3%;
   }
-/*   
-  button {
-    padding: 10px 20px;
-    background-color: #b083f1;
-    border: none;
-    border-radius: 8px;
-    color: white;
-    cursor: pointer;
-    font-family: "Oswald", sans-serif;
-  }
-  
-  button:hover {
-    background-color: #a071e1;
-  } */
+
   button {
   padding: 10px 20px;
   background-color: rgba(0, 0, 0, 0.2) !important;
@@ -68,6 +67,7 @@ button:active {
   align-items: center;
   gap: 10px;
   margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .like-button {
@@ -86,4 +86,26 @@ button:active {
 
 .like-button.liked {
   color: #ff3b3f; /* Cor do botão quando curtido */
+}
+
+.description.truncated {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.description.expanded {
+  display: block;
+}
+
+.toggle-text {
+  color: #FFF;
+  cursor: pointer;
+  margin-top: 5px;
+  font-size: 0.9em;
+  font-weight: bold;
+  padding-left: 9%;
+  padding-right: 9%;
 }
