--- a/paginaFeed/src/components/SideBar/BarBot/BarBot.css
+++ b/paginaFeed/src/components/SideBar/BarBot/BarBot.css
@@ -22,6 +22,8 @@
     border-radius: 10px;
     padding: 30px;
     color: white;
+    padding-left: 25%;
+    padding-right: 5%;
   }
   
   .answer-box {
