--- a/paginaFeed/src/components/SideBar/EditProfile/EditProfile.css
+++ b/paginaFeed/src/components/SideBar/EditProfile/EditProfile.css
@@ -5,6 +5,8 @@
     border-radius: 10px;
     margin: 20px 0;
     border: 2px solid #a83eff;
+    margin-left: 25%;
+    width: 70%;
   }
   
   .edit-profile h2 {
