--- a/paginaFeed/src/components/SideBar/Notifications/Notifications.css
+++ b/paginaFeed/src/components/SideBar/Notifications/Notifications.css
@@ -4,10 +4,10 @@
     padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
-    width: 100;
+    width: 70%;
     font-size: 1.2rem;
     border: 2px solid #a83eff;
-   
+    margin-left: 25%;
   }
   
   .notifications h2 {
