--- a/paginaFeed/src/index.css
+++ b/paginaFeed/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&display=swap');
 
+body {
+  font-family: "Oswald", sans-serif;
+}
+
 :root {
   font-family: "Oswald", sans-serif;
   line-height: 1.5;
